# agentic-ai-demo

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  pyproject.toml  skaffold.yaml
config/: 100-namespace.yaml  200-kafka-broker.yaml
db_customer/: README.md  data.sql  schema.sql
db_customer/config/: 400-secret.yaml  500-deployment.yaml  600-service.yaml
hack/: customer-db-start.sh  customer-db-stop.sh  install-300-kn-kafka-broker.sh  library.sh
models/: __init__.py
openshift/: routes.yaml
svc-intake/: app.py
svc-intake/config/: 000-deployment.yaml  100-service.yaml  200-sinkbinding.yaml
svc_customer_lookup/: README.md  app.py
svc_customer_lookup/config/: 000-deployment.yaml  100-ksvc.yaml  100-service.yaml  200-trigger.yaml  300-sinkbinding.yaml
svc_finance_responder/: README.md  app.py
svc_finance_responder/config/: 000-deployment.yaml  100-ksvc.yaml  100-service.yaml  200-trigger.yaml
svc_finance_responder/templates/: inbox.html
svc_guardian_processor/: README.md  app.py
svc_guardian_processor/config/: 000-deployment.yaml  100-ksvc.yaml  100-service.yaml  200-trigger.yaml  300-sinkbinding.yaml  400-configmap.yaml  410-llm-api-key-secret.yaml
svc_intake/: README.md  app.py
svc_intake/config/: 000-deployment.yaml  100-ksvc.yaml  100-service.yaml  200-sinkbinding.yaml
svc_router/: README.md  app.py
svc_router/config/: 000-deployment.yaml  100-ksvc.yaml  100-service.yaml  200-trigger.yaml  300-configmap.yaml  300-sinkbinding.yaml  (+1 more)
svc_structure_processor/: README.md  app.py
ui_observer/: README.md  app.py
(+13 files in other folders)
